@@ -1,26 +1,20 @@
-buildscript {
-    repositories {
-        mavenCentral()
-    }
-    dependencies {
-        classpath("org.jetbrains.kotlinx:atomicfu-gradle-plugin:0.18.3")
-    }
-}
-
 plugins {
-    kotlin("jvm") version "1.7.10"
+    kotlin("jvm") version "1.9.10"
     java
 }
 
 tasks {
     test {
         maxHeapSize = "4g"
+        jvmArgs(
+            "--add-opens", "java.base/jdk.internal.misc=ALL-UNNAMED",
+            "--add-exports", "java.base/jdk.internal.util=ALL-UNNAMED",
+            "--add-exports", "java.base/sun.security.action=ALL-UNNAMED"
+        )
     }
 }
 
-apply(plugin = "kotlinx-atomicfu")
-
-group = "ru.ifmo.mpp"
+group = "ru.itmo.mpp"
 version = "1.0-SNAPSHOT"
 
 repositories {
@@ -31,8 +25,13 @@ dependencies {
     implementation(kotlin("stdlib-jdk8"))
     implementation(kotlin("reflect"))
     testImplementation(kotlin("test-junit"))
-    testImplementation("org.jetbrains.kotlinx:lincheck:2.15")
-    testImplementation("com.amazonaws:aws-java-sdk:1.12.314")
+    testImplementation("org.jetbrains.kotlinx:lincheck:2.23")
+}
+
+java {
+    toolchain {
+        languageVersion.set(JavaLanguageVersion.of(17))
+    }
 }
 
 sourceSets.main {
